@@ -1,4 +1,4 @@
-# Copyright (C) 2017-2020 Apple Inc. All rights reserved.
+# Copyright (C) 2017-2021 Apple Inc. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -97,6 +97,13 @@ class TestFactory(Factory):
             self.addStep(self.JSCTestClass())
         if self.LayoutTestClass:
             self.addStep(self.LayoutTestClass())
+        if not platform.startswith('win'):
+            self.addStep(RunDashboardTests())
+        if self.LayoutTestClass:
+            self.addStep(ArchiveTestResults())
+            self.addStep(UploadTestResults())
+            self.addStep(ExtractTestResults())
+            self.addStep(SetPermissions())
 
         if platform.startswith('win') or platform.startswith('mac') or platform.startswith('ios-simulator'):
             self.addStep(RunAPITests())
@@ -108,17 +115,10 @@ class TestFactory(Factory):
         self.addStep(RunPerlTests())
         self.addStep(RunBindingsTests())
         self.addStep(RunBuiltinsTests())
-        if not platform.startswith('win'):
-            self.addStep(RunDashboardTests())
 
         if platform.startswith('mac') or platform.startswith('ios-simulator'):
             self.addStep(TriggerCrashLogSubmission())
 
-        if self.LayoutTestClass:
-            self.addStep(ArchiveTestResults())
-            self.addStep(UploadTestResults())
-            self.addStep(ExtractTestResults())
-            self.addStep(SetPermissions())
         if platform == "gtk":
             self.addStep(RunGtkAPITests())
             if additionalArguments and "--display-server=wayland" in additionalArguments:
